Fix wrapping for prototype.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -58,10 +58,6 @@
   }
 }
 
-.dragImage {
-  height: 93px;
-}
-
 /* --------Utility classes-------- */
 .is-hidden-small {
   @media (max-width: 879px) {
@@ -297,13 +293,16 @@ body {
     background: white;
     box-shadow: 0 1px 0 rgba(14, 19, 24, 0.15);
     z-index: 20;
+    position: relative;
 
     .toolbar-left {
       float: left;
+      white-space: nowrap;
     }
 
     .toolbar-right {
-      float: right;
+      position: absolute;
+      right: 8px;
     }
 
     .button {
@@ -341,13 +340,15 @@ body {
 
     .button-group {
       font-size: 0px;
-      margin: 2px 3px;
+      margin: 0 3px;
+      white-space: nowrap;
 
       .button {
         border-radius: 0;
         box-shadow: inset 0 0 0 1px rgba(14, 19, 24, 0.15);
         margin-left: -1px;
         transition: background-color 0.1s linear;
+        background-color: white;
 
         &:active,
         &.active {
